--- a/yms.html
+++ b/yms.html
@@ -82,7 +82,70 @@
                     <p>The original YMS platform had a dated and cluttered interface that made navigation and data retrieval challenging for users. My objective was to enhance the overall user experience by implementing a modern design approach. This included introducing a new dashboard for quick access to critical information, updating existing layouts for better organization, and refining specific user flows for smoother navigation.</p>
                 </div>
             </section>
+
+            <!-- New User Feedback Section -->
+            <section class="user-feedback">
+                <h2>User Interview & Feedback</h2>
+                <div class="feedback-grid">
+                    <div class="feedback-card" style="background-color: #F6FBFF;">
+                        <p>Every time I need to find specific cargo or truck information, I have to click through multiple pages. <strong>It's time-consuming.</strong>A more intuitive interface would make things much easier.</p>
+                    </div>
+
+                    <div class="feedback-card" style="background-color: #F6FBFF;">
+                        <p>We manage dozens of trucks every day, <strong>but the system does not clearly update task statuses.</strong> Sometimes driver-submitted statuses <strong>don't reflect in real time</strong>, which makes <strong>communication difficult</strong>.</p>
+                    </div>
+
+                    <div class="feedback-card" style="background-color: #F6FBFF;">
+                        <p>Many details, like company names and license plates, <strong>remain the same for repeated tasks, but we have to manually enter them every time.</strong> It's inefficient.</p>
+                    </div>
+
+                    <div class="feedback-card" style="background-color: #F6FBFF;">
+                        <p>Sometimes, we need to check information on the go, but the system is barely usable on mobile. <strong>Buttons are too small</strong>, and <strong>the layout is unresponsive</strong>.</p>
+                    </div>
+
+                    <div class="feedback-card" style="background-color: #F6FBFF;">
+                        <p>We need to generate regular reports, but the <strong>system only provides spreadsheets with raw data</strong>. Without clear charts, analyzing information is frustrating.</p>
+                    </div>
+
+                    <div class="feedback-card" style="background-color: #F6FBFF;">
+                        <p>There's <strong>no clear role differentiation in the system</strong>. Admins and regular users see almost the same dashboard, making it harder for non-admins to navigate.</p>
+                    </div>
+                </div>
+            </section>
+
+            
+            <!-- New Problem Research Section -->
+            <section class="problem-research">
+                <h2>Problem research</h2>
+                <div class="research-images">
+                    <img src="assets/img/yms/pr-1.png" alt="Problem Research Interface 1">
+                    <img src="assets/img/yms/pr-2.png" alt="Problem Research Interface 2">
+                </div>
+                <div class="research-cards">
+                    <div class="research-card">
+                        <h3>Weaness 1</h3>
+                        <p style="padding-top:1rem;">Missed delivery deadlines leading to customer dissatisfaction</p>
+                    </div>
+                    <div class="research-card">
+                        <h3>Weaness 2</h3>
+                        <p style="padding-top:1rem;">Increased operational costs due to inefficient routing</p>
+                    </div>
+                    <div class="research-card">
+                        <h3>Weaness 3</h3>
+                        <p style="padding-top:1rem;">High stress levels from constant uncertainty about fleet operations</p>
+                    </div>
+                </div>
+            </section>
         </div>
+
+        <!-- New Persona Section -->
+        <section class="persona">
+            <h2>Persona</h2>
+            <div class="persona-content">
+                <img src="assets/img/yms/persona.png" alt="User Persona - Mandy, a logistics manager">
+            </div>
+        </section>
+
 
         <section class="value">
             <h2>Value</h2>
