--- a/waytodrive.html
+++ b/waytodrive.html
@@ -631,6 +631,13 @@
                 </div>
             </section>
 
+            <section class="userfl">
+                <h2>Userflow</h2>
+                <div class="persona-content">
+                    <img src="assets/img/waytodrive/userflow.png" alt="Userflow">
+                </div>
+            </section>
+
             <section class="design-goal">
                 <h2>Design Goal</h2>
                 <div class="goal-cards grid">
@@ -659,7 +666,7 @@
             </section>
 
             <section class="design-challenges">
-                <h2>User Flows</h2>
+                <h2>Features</h2>
 
                 <div class="challenge-block">
                     <div class="challenge-content">
@@ -746,6 +753,14 @@
                             </div>
                         </div>
                     </div>
+                </div>
+            </section>
+
+            <section class="design-system">
+                <h2>Design System</h2>
+                <div class="design-system">
+                    <img src="assets/img/waytodrive/component/font.png" alt="Typograph and color palette">
+                    <img src="assets/img/waytodrive/component/ui.png" alt="ui component">
                 </div>
             </section>
 
