--- a/yms.html
+++ b/yms.html
@@ -146,6 +146,13 @@
             </div>
         </section>
 
+        <section class="sitemap">
+            <h2>Site Map</h2>
+            <div class="sitemap-content">
+                <img src="assets/img/yms/sitemap.png" alt="Site Map">
+            </div>
+        </section>
+
 
         <section class="value">
             <h2>Value</h2>
