--- a/yms.html
+++ b/yms.html
@@ -88,27 +88,33 @@
                 <h2>User Interview & Feedback</h2>
                 <div class="feedback-grid">
                     <div class="feedback-card" style="background-color: #F6FBFF;">
-                        <p>Every time I need to find specific cargo or truck information, I have to click through multiple pages. <strong>It's time-consuming.</strong>A more intuitive interface would make things much easier.</p>
+                        <h4>Forcus 1</h4>
+                        <p style="padding-top:0.5rem;">Every time I need to find specific cargo or truck information, I have to click through multiple pages. <strong>It's time-consuming.</strong>A more intuitive interface would make things much easier.</p>
+                    </div>
+
+                    <div class="feedback-card" style="background-color: #e4f3ff;">
+                        <h4>Forcus 2</h4>
+                        <p style="padding-top:0.5rem;">We manage dozens of trucks every day, <strong>but the system does not clearly update task statuses.</strong> Sometimes driver-submitted statuses <strong>don't reflect in real time</strong>, which makes <strong>communication difficult</strong>.</p>
                     </div>
 
                     <div class="feedback-card" style="background-color: #F6FBFF;">
-                        <p>We manage dozens of trucks every day, <strong>but the system does not clearly update task statuses.</strong> Sometimes driver-submitted statuses <strong>don't reflect in real time</strong>, which makes <strong>communication difficult</strong>.</p>
+                        <h4>Forcus 3</h4>
+                        <p style="padding-top:0.5rem;">Many details, like company names and license plates, <strong>remain the same for repeated tasks, but we have to manually enter them every time.</strong> It's inefficient.</p>
+                    </div>
+
+                    <div class="feedback-card" style="background-color: #e4f3ff;">
+                        <h4>Forcus 4</h4>
+                        <p style="padding-top:0.5rem;">Sometimes, we need to check information on the go, but the system is barely usable on mobile. <strong>Buttons are too small</strong>, and <strong>the layout is unresponsive</strong>.</p>
                     </div>
 
                     <div class="feedback-card" style="background-color: #F6FBFF;">
-                        <p>Many details, like company names and license plates, <strong>remain the same for repeated tasks, but we have to manually enter them every time.</strong> It's inefficient.</p>
+                        <h4>Forcus 5</h4>
+                        <p style="padding-top:0.5rem;">We need to generate regular reports, but the <strong>system only provides spreadsheets with raw data</strong>. Without clear charts, analyzing information is frustrating.</p>
                     </div>
 
-                    <div class="feedback-card" style="background-color: #F6FBFF;">
-                        <p>Sometimes, we need to check information on the go, but the system is barely usable on mobile. <strong>Buttons are too small</strong>, and <strong>the layout is unresponsive</strong>.</p>
-                    </div>
-
-                    <div class="feedback-card" style="background-color: #F6FBFF;">
-                        <p>We need to generate regular reports, but the <strong>system only provides spreadsheets with raw data</strong>. Without clear charts, analyzing information is frustrating.</p>
-                    </div>
-
-                    <div class="feedback-card" style="background-color: #F6FBFF;">
-                        <p>There's <strong>no clear role differentiation in the system</strong>. Admins and regular users see almost the same dashboard, making it harder for non-admins to navigate.</p>
+                    <div class="feedback-card" style="background-color: #e4f3ff;">
+                        <h4>Forcus 6</h4>
+                        <p style="padding-top:0.5rem;">There's <strong>no clear role differentiation in the system</strong>. Admins and regular users see almost the same dashboard, making it harder for non-admins to navigate.</p>
                     </div>
                 </div>
             </section>
