--- a/serviceapp.html
+++ b/serviceapp.html
@@ -168,7 +168,7 @@
             </div>
         </section> -->
 
-        <section class="key-features">
+        <!-- <section class="key-features">
             <h2>Key Features</h2>
             
             <div class="features-grid">
@@ -199,7 +199,7 @@
                     </iframe>
                 </div>
             </div>
-        </section>
+        </section> -->
 
         <section class="design-challenges">
             <h2>Design Challenges and Solutions</h2>
