--- a/index.html
+++ b/index.html
@@ -270,6 +270,7 @@
                 <h3>Way to drive - Award Winning</h3>
                 <p>App Design, AR</p>
             </a>
+            
             <a href="serviceapp.html" class="project-card">
                 <img src="assets/img/cover-serviceapp.png" alt="Service App">
                 <h3>Service App</h3>
@@ -323,7 +324,14 @@
                 </div> -->
             </div>
             <div class="projects-scroll">
+                <a href="mona.html" class="project-card">
+                    <img src="assets/img/cover-mona.png" alt="Mona App">
+                    
+                    <h3>Mona - Award Winning</h3>
+                    <p>App Design, AI Chatbot</p>
+                </a>
                 <a href="mystorybook.html" class="project-card">
+
                     <img src="assets/img/cover-mystorybook.png" alt="My Story Book">
                     <h3>My Story Book - Award Winning</h3>
                     <p>App Design, game design</p>
