--- a/yms.html
+++ b/yms.html
@@ -148,7 +148,7 @@
         <section class="persona">
             <h2>Persona</h2>
             <div class="persona-content">
-                <img src="assets/img/yms/persona.png" alt="User Persona - Mandy, a logistics manager">
+                <img src="assets/img/yms/persona-group.png" alt="User Persona - Mandy, a logistics manager">
             </div>
         </section>
 
@@ -156,6 +156,13 @@
             <h2>Site Map</h2>
             <div class="sitemap-content">
                 <img src="assets/img/yms/sitemap.png" alt="Site Map">
+            </div>
+        </section>
+
+        <section class="wireframe">
+            <h2>Wireframe</h2>
+            <div class="sitemap-content">
+                <img src="assets/img/yms/wireframe.png" alt="Wireframe">
             </div>
         </section>
 
