--- a/index.html
+++ b/index.html
@@ -263,7 +263,12 @@
             <a href="yms.html" class="project-card">
                 <img src="assets/img/cover-yms.png" alt="Yard Management System">
                 <h3>Yard Management System</h3>
-                <p>Web Design, SaaS</p>
+                <p>SaaS UIUX Design</p>
+            </a>
+            <a href="#" class="project-card">
+                <img src="assets/img/cover-fms.png" alt="Designs">
+                <h3>Freight Management System - Coming Soon</h3>
+                <p>0 to 1 SaaS Design</p>
             </a>
             <a href="waytodrive.html" class="project-card">
                 <img src="assets/img/cover-waytodrive.png" alt="Way to drive">
@@ -290,17 +295,11 @@
                 <img src="assets/img/cover-lso.png" alt="My Story Book">
                 <h3>LSO Branding Identity</h3>
                 <p>Branding Identity, Graphic Design</p>
-            </a>
-            
-            <a href="#" class="project-card" onclick="openVideoPopup(event)">
-                <img src="assets/img/cover-expedia.png" alt="Expedia Promo">
-                <h3>Expedia Promo Video</h3>
-                <p>Animation, Illustration</p>
-            </a>
+            </a>           
             <a href="#" class="project-card">
                 <img src="assets/img/cover-designsystem.png" alt="Designs">
                 <h3>UNIS Design System - Coming Soon</h3>
-                <p>UIUX Design, Design System</p>
+                <p>Design System</p>
             </a>
         </div>
 
@@ -317,18 +316,23 @@
 
         <div class="passion-projects">
             <div class="section-header">
-                <h2>Passion Projects</h2>
+                <h2>Other Projects</h2>
                 <!-- <div class="navigation-arrows">
                     <button class="nav-arrow prev" aria-label="Previous projects">←</button>
                     <button class="nav-arrow next" aria-label="Next projects">→</button>
                 </div> -->
             </div>
             <div class="projects-scroll">
-                <a href="mona.html" class="project-card">
+                <!-- <a href="mona.html" class="project-card">
                     <img src="assets/img/cover-mona.png" alt="Mona App">
                     
                     <h3>Mona - Award Winning</h3>
                     <p>App Design, AI Chatbot</p>
+                </a> -->
+                <a href="#" class="project-card" onclick="openVideoPopup(event)">
+                    <img src="assets/img/cover-expedia.png" alt="Expedia Promo">
+                    <h3>Expedia Promo Video</h3>
+                    <p>Animation, Illustration</p>
                 </a>
                 <a href="mystorybook.html" class="project-card">
 
