--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
             </div>
             <!-- Desktop Navigation -->
             <div class="desktop-nav">
-                <a href="index.html">UIUX Design Works</a>
+                <a href="index.html">Projects</a>
                 <!-- <a href="graphic.html">Graphic Design</a> -->
                 <a href="about.html">About</a>
                 <a href="https://drive.google.com/file/d/1-tQKIA-VN73FQQcck2pSiNM1PmIaoV1A/view?usp=sharing" target="_blank">Resume</a>
@@ -238,7 +238,7 @@
                 <span class="material-icons">menu</span>
             </button>
             <div class="mobile-nav">
-                <a href="index.html">UIUX Design Works</a>
+                <a href="index.html">Projects</a>
                 <!-- <a href="graphic.html">Graphic Design</a> -->
                 <a href="https://drive.google.com/file/d/1-tQKIA-VN73FQQcck2pSiNM1PmIaoV1A/view?usp=sharing" target="_blank">Resume</a>
                 <a href="https://www.linkedin.com/in/mlan14/" target="_blank">LinkedIn</a>
@@ -363,7 +363,7 @@
         <div>
             <p>Designed by Meng Lan 2024</p>
             <nav>
-                <a href="index.html">UIUX Design Works</a>
+                <a href="index.html">Projects</a>
                 <!-- <a href="graphic.html">Graphic Design</a> -->
                 <a href="about.html">About</a>
                 <a href="https://drive.google.com/file/d/1-tQKIA-VN73FQQcck2pSiNM1PmIaoV1A/view?usp=sharing" target="_blank">Resume</a>
