--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
             <a href="#" class="project-card">
                 <img src="assets/img/cover-fms.png" alt="Designs">
                 <h3>Freight Management System - Coming Soon</h3>
-                <p>0 to 1 SaaS Design</p>
+                <p>0 to 1 End-to-End SaaS Product Design, Dual Theme</p>
             </a>
             <a href="waytodrive.html" class="project-card">
                 <img src="assets/img/cover-waytodrive.png" alt="Way to drive">
